package iut.rodez.projet.sae.fourawalkapi.model.enums;

/**
 * Représente le niveau d'entraînement physique du randonneur.
 */
public enum Level {
    SPORTIF,
    ENTRAINE,
    DEBUTANT
}
