package iut.rodez.projet.sae.fourawalkapi.model.enums;

/**
 * Représente la morphologie d'un participant
 */
public enum Morphology {
    LEGERE,
    MOYENNE,
    FORTE
}
